# Dicrete_filter_PID_controller

./: Assignment.md  CMakeLists.txt  LICENSE  README.md  Report.md  compila.sh
assets/: controller_plant.slx
data/: scope_data.tsv  scope_data_stefano_0.tsv  scope_data_stefano_1.tsv  scope_data_stefano_2.tsv  scope_data_stefano_3.tsv  scope_data_stefano_4.tsv
plot/: octave-script.m  oscillation_reduction_plot.m  plot.sh
src/: controller.cpp  controller.h  main.cpp  plant.cpp  plant.h
